# YZTA-P2P-RAG-Project

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/core/: __init__.py  chunker.py  document_processor.py  embedder.py  llm_client.py  rag_pipeline.py  reranker.py  semantic_cache.py  text_cleaner.py  vector_store.py
backend/app/models/: health.py  task.py
backend/app/schemas/: chat.py  document.py  summarize.py
backend/app/services/: chat_service.py  document_service.py  sse_service.py  summarize_service.py
backend/app/workers/: ingestion_worker.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_chat_streaming_e2e.py  test_ingestion.py  test_rag_pipeline.py  test_worker_integration.py
backend/tests/test_files/: README.md  utf8.txt
backend/tests/unit/: conftest.py  test_api_chat.py  test_api_documents.py  test_api_tasks.py  test_api_upload.py  test_chunker.py  test_document_processor.py  test_embedder.py  test_error_scenarios.py  test_health.py  test_llm_client.py  test_rag_pipeline.py  test_reranker.py  test_run_evaluation.py  test_semantic_cache.py  test_text_cleaner.py  (+1 more)
demo/: .gitkeep
eval/: run_evaluation.py  test_dataset.json
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
(+44 files in other folders)
